--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-module",
-  "version": "1.0.0",
-  "description": "My new Nuxt module",
-  "repository": "your-org/my-module",
+  "name": "wl-reservation-module",
+  "version": "1.0.1",
+  "description": "Whitelabel Reservation Module",
+  "repository": "https://github.com/arimaulana07/wl-reservation-module.git",
   "license": "MIT",
   "type": "module",
   "exports": {
